native/desktop-macos/headers/desktop_macos.h

typedef enum WindowVisualEffect {
  TitlebarEffect,
  SelectionEffect,
  MenuEffect,
  PopoverEffect,
  SidebarEffect,
  HeaderViewEffect,
  SheetEffect,
  WindowBackgroundEffect,
  HUDWindowEffect,
  FullScreenUIEffect,
  ToolTipEffect,
  ContentBackgroundEffect,
  UnderWindowBackgroundEffect,
  UnderPageBackgroundEffect,
} WindowVisualEffect;
typedef struct Window Window;
typedef double LogicalPixels;
typedef struct LogicalSize {
  LogicalPixels width;
  LogicalPixels height;
} LogicalSize;
typedef struct Color {
  double red;
  double green;
  double blue;
  double alpha;
} Color;
typedef enum WindowBackground_Tag {
  Transparent,
  SolidColor,
  VisualEffect,
} WindowBackground_Tag;
typedef struct WindowBackground {
  WindowBackground_Tag tag;
  union {
    struct {
      struct Color solid_color;
    };
    struct {
      enum WindowVisualEffect visual_effect;
    };
  };
} WindowBackground;
void dispatcher_main_exec_async(void (*f)(void));
struct LogicalSize window_get_min_size(const struct Window *window);
void window_set_min_size(const struct Window *window, struct LogicalSize size);
void window_toggle_full_screen(const struct Window *window);
bool window_is_full_screen(const struct Window *window);
void window_start_drag(const struct Window *window);
void window_invalidate_shadow(const struct Window *window);
void window_set_background(const struct Window *window, struct WindowBackground background);