kotlin-desktop-toolkit/src/main/java/org/jetbrains/desktop/macos/generated/desktop_macos_h.java


    private static class window_get_min_size {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            LogicalSize.layout(),
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_get_min_size");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * struct LogicalSize window_get_min_size(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_get_min_size$descriptor() {
        return window_get_min_size.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * struct LogicalSize window_get_min_size(const struct Window *window)
     * }
     */
    public static MethodHandle window_get_min_size$handle() {
        return window_get_min_size.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * struct LogicalSize window_get_min_size(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_min_size$address() {
        return window_get_min_size.ADDR;
    }

    /**
     * {@snippet lang=c :
     * struct LogicalSize window_get_min_size(const struct Window *window)
     * }
     */
    public static MemorySegment window_get_min_size(SegmentAllocator allocator, MemorySegment window) {
        var mh$ = window_get_min_size.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_get_min_size", allocator, window);
            }
            return (MemorySegment)mh$.invokeExact(allocator, window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_set_min_size {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            LogicalSize.layout()
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_set_min_size");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_set_min_size(const struct Window *window, struct LogicalSize size)
     * }
     */
    public static FunctionDescriptor window_set_min_size$descriptor() {
        return window_set_min_size.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_set_min_size(const struct Window *window, struct LogicalSize size)
     * }
     */
    public static MethodHandle window_set_min_size$handle() {
        return window_set_min_size.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_set_min_size(const struct Window *window, struct LogicalSize size)
     * }
     */
    public static MemorySegment window_set_min_size$address() {
        return window_set_min_size.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_set_min_size(const struct Window *window, struct LogicalSize size)
     * }
     */
    public static void window_set_min_size(MemorySegment window, MemorySegment size) {
        var mh$ = window_set_min_size.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_set_min_size", window, size);
            }
            mh$.invokeExact(window, size);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_toggle_full_screen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_toggle_full_screen");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_toggle_full_screen(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_toggle_full_screen$descriptor() {
        return window_toggle_full_screen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_toggle_full_screen(const struct Window *window)
     * }
     */
    public static MethodHandle window_toggle_full_screen$handle() {
        return window_toggle_full_screen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_toggle_full_screen(const struct Window *window)
     * }
     */
    public static MemorySegment window_toggle_full_screen$address() {
        return window_toggle_full_screen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_toggle_full_screen(const struct Window *window)
     * }
     */
    public static void window_toggle_full_screen(MemorySegment window) {
        var mh$ = window_toggle_full_screen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_toggle_full_screen", window);
            }
            mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_is_full_screen {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            desktop_macos_h.C_BOOL,
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_is_full_screen");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * bool window_is_full_screen(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_is_full_screen$descriptor() {
        return window_is_full_screen.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * bool window_is_full_screen(const struct Window *window)
     * }
     */
    public static MethodHandle window_is_full_screen$handle() {
        return window_is_full_screen.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * bool window_is_full_screen(const struct Window *window)
     * }
     */
    public static MemorySegment window_is_full_screen$address() {
        return window_is_full_screen.ADDR;
    }

    /**
     * {@snippet lang=c :
     * bool window_is_full_screen(const struct Window *window)
     * }
     */
    public static boolean window_is_full_screen(MemorySegment window) {
        var mh$ = window_is_full_screen.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_is_full_screen", window);
            }
            return (boolean)mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_start_drag {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_start_drag");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_start_drag(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_start_drag$descriptor() {
        return window_start_drag.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_start_drag(const struct Window *window)
     * }
     */
    public static MethodHandle window_start_drag$handle() {
        return window_start_drag.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_start_drag(const struct Window *window)
     * }
     */
    public static MemorySegment window_start_drag$address() {
        return window_start_drag.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_start_drag(const struct Window *window)
     * }
     */
    public static void window_start_drag(MemorySegment window) {
        var mh$ = window_start_drag.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_start_drag", window);
            }
            mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_invalidate_shadow {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_invalidate_shadow");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_invalidate_shadow(const struct Window *window)
     * }
     */
    public static FunctionDescriptor window_invalidate_shadow$descriptor() {
        return window_invalidate_shadow.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_invalidate_shadow(const struct Window *window)
     * }
     */
    public static MethodHandle window_invalidate_shadow$handle() {
        return window_invalidate_shadow.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_invalidate_shadow(const struct Window *window)
     * }
     */
    public static MemorySegment window_invalidate_shadow$address() {
        return window_invalidate_shadow.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void window_invalidate_shadow(const struct Window *window)
     * }
     */
    public static void window_invalidate_shadow(MemorySegment window) {
        var mh$ = window_invalidate_shadow.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("window_invalidate_shadow", window);
            }
            mh$.invokeExact(window);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class window_set_background {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            desktop_macos_h.C_POINTER,
            WindowBackground.layout()
        );

        public static final MemorySegment ADDR = desktop_macos_h.findOrThrow("window_set_background");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void window_set_background(const struct Window *window, struct WindowBackground background)
     * }
     */
    public static FunctionDescriptor window_set_background$descriptor() {
        return window_set_background.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void window_set_background(const struct Window *window, struct WindowBackground background)
     * }
     */
    public static MethodHandle window_set_background$handle() {
        return window_set_background.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void window_set_background(const struct Window *window, struct WindowBackground background)
     * }
     */
    public static MemorySegment window_set_background$address() {
        return window_set_background.ADDR;
    }
